# ogtk

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  UM.py  Untitled.ipynb  Untitled1.ipynb  __init__.py  pyproject.toml  sandbox.ipynb  setop.py  setup.py  split_fastq.py
.github/workflows/: publish_to_pypi.yml  python-publish.yml
conda/: ogtk.yml
docs/: api.rst  conf.py  index.md  index.rst  requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/api/: modules.rst  ogtk.ltr.fracture.pipeline.rst  ogtk.ltr.fracture.rst  ogtk.ltr.rst  ogtk.ltr.shltr.rst  ogtk.rst  ogtk.utils.rst
examples/: multi_flowcell_example.yaml
ogtk/: UM.py  __init__.py  aln_to_mat.py  bbin_alleles.py  compute_distance_headless.py  demultiplex_readset_into_pickle.py  fastball_headless_assembly.py  fbli.py  gegen.py  kmers.py  ltr.py  ltr_matlin.py  mp.py  scbin_alleles.py  utils.py
ogtk/ltr/: __init__.py  align.py  bbin_alleles.py  bin_alleles.py  cluster.py  ltr.py  ltr_matlin.py  ltr_mtl.py  ltr_run.py  ltr_utils.py  scbin_alleles.py  scmch_binalleles.py  scsch_binalleles.py
ogtk/ltr/fracture/: README.md  __init__.py  cassiopeia_petracer.py  cli.py  comparison_screen.tcss  config.yml  fracture_viewer.py  fracture_viewer.tcss  pipeline.py  preprocess.py
ogtk/ltr/fracture/extensions/: PEtracer_metas.csv  PEtracer_metas_edited.csv  PEtracer_metas_flanks.csv  PEtracer_metas_small.csv  PEtracer_metas_test.csv  __init__.py  base.py  cassiopeia_lineage.py  cassiopeia_petracer.py  config.py  registry.py
ogtk/ltr/fracture/pipeline/: README.md  __init__.py  api_ext.py  core.py  formats.py  masking.py  plot_gen.py  plotting.py  qc.py  segmentation.py  steps.py  types.py
ogtk/ltr/fracture/post/: __init__.py  fracture_viewer.py  instructions.txt  post.py  tree_qc.py
ogtk/ltr/fracture/post/analysis/: __init__.py  advanced.py
ogtk/ltr/fracture/post/core/: __init__.py  collection.py  metrics.py
ogtk/ltr/fracture/post/metrics/: __init__.py  analysis.py  base.py  fracture_viewer.py  summary.py
ogtk/ltr/fracture/post/viewer/: __init__.py  app.py  comparison_screen.tcss  fracture_viewer.tcss
ogtk/ltr/fracture/viewer/: fracture_viewer.py
ogtk/ltr/shltr/: __init__.py  alg_emboss.py  alg_lib.py  bulk.py  bulk_pipeline.py  cluster.py  ibars.py  pipeline.py  plot.py  plot_bulk.py  sc.py  utils.py
ogtk/ngs/: ssg.py
ogtk/utils/: __init__.py  corr_dict.py  db.py  general.py  log.py  sc.py  sge.py  utils.py
scripts/: strip_stage.sh
templates/: bwa_template.yaml  dorado_template.yaml  gegen_sitesdb.yaml  genrefdb.yaml  star_template.yaml
