[build-system]
requires=["hatchling"]
build-backend= "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[project]
name="ogtk"
version="0.1.7"
python_requires='>=3.9'
readme="README.md"
authors=[
  {name="Pedro Olivares"}
]
maintainers=[
  {name="Pedro Olivares", email="pedroy.final@gmail.com"}
]
description="General tools for genomics and lineage tracing"
#long_description=long_description,
#long_description_content_type="text/markdown",
urls.Home-page="https://github.com/tzeitim/ogtk"
dependencies=[
    'numpy>=1.21.0,<2.0.0',
    'colorhash',
    #'fasta',
    'fastcluster',
    'matplotlib',
    'pandas',
    'polars',
    'polars-hash',
    'pyarrow',
    'pyaml', 
    'pysam', 
    'pyfaidx', 
    'pyfasta', 
    'fastparquet',
    'regex', 
    'rich',
    'scipy',
    'seaborn',
    'setuptools_rust',
    'hdbscan',
    'ngs_tools',
    'pyseq_align',
    'tables'
] 

# Platform-specific core dependencies
dependencies-macos=[
    'bgzip; sys_platform == "darwin"',  # Will be installed after manual LLVM setup
]
dependencies-other=[
    'bgzip; sys_platform != "darwin"',  # Direct install on non-macOS platforms
]

classifiers=[
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
[project.optional-dependencies]
sc=[
        'metacells',
        'scanpy',
]

rs=[
    'rogtk',
    'maturin', 
    'patchelf; sys_platform != "darwin"',  # Install patchelf only on non-macOS systems
]

doc=[
 "docutils>=0.8,!=0.18.*,!=0.19.*",
  "sphinx>=4",
  "sphinx-book-theme>=1.0.0",
  "sphinx-book-theme",
  "sphinxcontrib-bibtex>=1.0.0",
  "sphinx-autodoc-typehints",
  "sphinxext-opengraph",
  "sphinx-copybutton",
  "sphinx-pyproject",
  "sphinx-argparse",
  "myst-nb",
  "myst-parser",
  "sphinx-autobuild",
  "furo", #theme
  "ipykernel",
  "ipython",
  "pandas",
]


[tool.sphinx-pyproject]
config-overrides = true
